<resources>
    <string name="app_name">Sense It All!</string>
    <string-array name="lightPercentages">
        <item>0 to 10 %</item>
        <item>11 to 20 %</item>
        <item>21 to 30 %</item>
        <item>31 to 40 %</item>
        <item>41 to 50 %</item>
        <item>51 to 60 %</item>
        <item>61 to 70 %</item>
        <item>71 to 80 %</item>
        <item>81 to 90 %</item>
        <item>91 to 100 %</item>
    </string-array>
    <string-array name="sensors_list">
        <item>Main Camera</item>
        <item>Secondary Camera</item>
        <item>GPS</item>
        <item>WiFi</item>
        <item>Bluetooth</item>
        <item>GSM/UMTS</item>
        <item>Accelerometer</item>
        <item>Compass</item>
        <item>Radio</item>
        <item>Screen</item>
        <item>Battery</item>
        <item>CPU</item>
        <item>Sound</item>
        <item>Vibrator</item>
        <item>Audio/Video outputs</item>
        <item>Android OS</item>
        <item>Light Sensor</item>
        <item>Proximity Sensor</item>
        <item>Temperature Sensor</item>
        <item>Pressure Sensor</item>
        <item>Relative Humidity</item>
        <item>Flash</item>
        <item>Gyroscope</item>
        <item>Gravity</item>
        <item>Linear Acceleration</item>
        <item>Rotation Vector</item>
        <item>Infrared</item>
        <item>Step Detector</item>
        <item>Step Counter</item>
        <item>Motion Detector</item>
        <item>Stationary Detector</item>
        <item>Multi Touch</item>
        <item>Heart Rate</item>
        <item>Fingerprint</item>
        <item>NFC</item>
        <item>Magnetic Field Sensor</item>
        
        
        
    </string-array>
    <string-array name="sensor_drawable_urls">
        <item>https://3.bp.blogspot.com/-f1n8B6GZBtQ/WmswLhO8RDI/AAAAAAAAAd8/ghY3Dx4zrK8jvSx28nWkr3MY4Hm0j-J1ACLcBGAs/s320/camera.png</item>
        <item>https://3.bp.blogspot.com/-f1n8B6GZBtQ/WmswLhO8RDI/AAAAAAAAAd8/ghY3Dx4zrK8jvSx28nWkr3MY4Hm0j-J1ACLcBGAs/s320/camera.png</item>
        <item>https://3.bp.blogspot.com/-GvL6wPg6fZU/WmswNyqZogI/AAAAAAAAAeU/hJsCk18PofMtI2UhQxSkANJkq1BUYbWPwCLcBGAs/s320/gps.png</item>
        <item>https://1.bp.blogspot.com/-q5msqm7FBXM/WmswVM2vXII/AAAAAAAAAfo/NXvgxiawDWYi8WzOCMd6-l5vWxIDzNxcACLcBGAs/s1600/wifi.png</item>
        <item>https://1.bp.blogspot.com/-U7D23FFAEiY/WmswKxdo8MI/AAAAAAAAAd4/K-HmZl7-JpsuWX5wTukUsaLGtE7gTmxPwCLcBGAs/s1600/bluetooth.png</item>
        <item>https://2.bp.blogspot.com/-sRqebbMdy0A/WmswOH-F49I/AAAAAAAAAeY/YdC7GmQ1kMc3dsAIsHcxaCsgrXguGTz6QCLcBGAs/s1600/gsm.png</item>
        <item>https://2.bp.blogspot.com/-QCokTKsm6CQ/WmswJMtBKeI/AAAAAAAAAdo/eMOlzKc7MKY8Zfp2eIFZyXwEGVLyQuuHACLcBGAs/s1600/accelerometer.png</item>
        <item>https://4.bp.blogspot.com/-pIyTdnzov4c/WmswMDhTOnI/AAAAAAAAAeA/OiN_0qJZtcIhfvaif8Mk0qklne-RKrK5wCLcBGAs/s320/compass.png</item>
        <item>https://4.bp.blogspot.com/-q9nq_mM8oTw/WmswSHUrRWI/AAAAAAAAAfE/SEthVilo8IM9yhrUpMZAkmpagJJY_QhPgCLcBGAs/s320/radio.png</item>
        <item>https://4.bp.blogspot.com/-K2-meG-eDkA/WmswS8r7vII/AAAAAAAAAfM/PPJLnGkuHOAij4RC8BMknnkMrIjtI5-SQCLcBGAs/s1600/screen.png</item>
        <item>https://4.bp.blogspot.com/-g0NHFvVdsOk/WmswKj-l73I/AAAAAAAAAd0/DTQOYIlfxyUhncK-bI9jRGEKSGPrwZLlACLcBGAs/s320/battery_.png</item>
        <item>https://3.bp.blogspot.com/-7p2qxxjA_EU/WmswMcBFYRI/AAAAAAAAAeE/mEjSlVCGXYcbWlrReI4_mNwPmSALwZpTQCLcBGAs/s320/cpu.png</item>
        <item>https://1.bp.blogspot.com/-uk7Aa8sAu_8/WmswTdz5lEI/AAAAAAAAAfQ/TY1o0QtBz2MpbobRc0cGwhE_4aCffAAOQCLcBGAs/s320/sound.png</item>
        <item>https://2.bp.blogspot.com/-u8Hoiypx_qE/WmswUxYMCgI/AAAAAAAAAfk/ynwfoxc7H2QVVs6pDvMdCZvKKjxq1FeMwCLcBGAs/s320/vibrator.png</item>
        <item>https://4.bp.blogspot.com/-KKsA922vqNU/WmswKdthRyI/AAAAAAAAAdw/cEQhyXuSZJ0ejDzEeEut-9o1-yh1hy5WgCLcBGAs/s320/aud_vid.png</item>
        <item>https://4.bp.blogspot.com/-1awt1Qp9PSk/WmswJKVZgPI/AAAAAAAAAdg/oNCbkOOfKZ0D8QygcngiO4PkIYCLw2dIQCLcBGAs/s1600/android.png</item>
        <item>https://4.bp.blogspot.com/-BQEihpC8aT0/WmswPUrxEXI/AAAAAAAAAeo/5zCsfy_LsWIeeXOD3R0vgSQWvxiVLJlygCLcBGAs/s1600/light.png</item>
        <item>https://2.bp.blogspot.com/-VV5Yfj5FK8k/WmswR2TAIiI/AAAAAAAAAfA/B-iu5VzkqKAbcsNICc3i5co5JbrrsD0mQCLcBGAs/s1600/proximity.png</item>
        <item>https://2.bp.blogspot.com/-7YZr-IH2Lpc/WmswTnHeaDI/AAAAAAAAAfY/JSKodvsHDps9zCm5pwEr-8MB0ovfO02PgCLcBGAs/s1600/temperature.png</item>
        <item>https://4.bp.blogspot.com/-BQEihpC8aT0/WmswPUrxEXI/AAAAAAAAAeo/5zCsfy_LsWIeeXOD3R0vgSQWvxiVLJlygCLcBGAs/s1600/light.png</item>
        <item>https://4.bp.blogspot.com/-apxdJvRhqEA/WmswPIYMoOI/AAAAAAAAAek/EPtTlPbfy6E97nYWMlNgaCkv1oiP1MecQCLcBGAs/s1600/humidity.png</item>
        <item>https://4.bp.blogspot.com/-nzEdyutH7xo/WmswNDBDAtI/AAAAAAAAAeM/07-j22HY4dM3wK9gl8-Ge6PKyglEWIS6wCLcBGAs/s1600/flash.jpg</item>
        <item>https://1.bp.blogspot.com/-4GIr1gg5_3Q/WmswOQ9_u5I/AAAAAAAAAec/AjnBh4PYIuQKe_ot34jOs2KtWOs_ngECQCLcBGAs/s1600/gyroscope.png</item>
        <item>https://2.bp.blogspot.com/-BOHfkafwM1A/WmswKLaghzI/AAAAAAAAAds/mqhGm9IzS9gBc5wKi2lZ7vcqgfFwx1hpwCLcBGAs/s320/apple.png</item>
        <item>https://2.bp.blogspot.com/-QCokTKsm6CQ/WmswJMtBKeI/AAAAAAAAAdo/eMOlzKc7MKY8Zfp2eIFZyXwEGVLyQuuHACLcBGAs/s1600/accelerometer.png</item>
        <item>https://1.bp.blogspot.com/-EQTe6Z793lk/WmswSciwxPI/AAAAAAAAAfI/wK_5VL2NaBYqG4J1cpTbk0jTurg1Age3QCLcBGAs/s1600/rotation.png</item>
        <item>https://2.bp.blogspot.com/-VV5Yfj5FK8k/WmswR2TAIiI/AAAAAAAAAfA/B-iu5VzkqKAbcsNICc3i5co5JbrrsD0mQCLcBGAs/s1600/proximity.png</item>
        <item>https://1.bp.blogspot.com/-Y1tk7P6cm5c/WmswTpOiD0I/AAAAAAAAAfU/jn1YtpovA2QV1O56AFL50ObBheGQVHY5wCLcBGAs/s1600/step_detector.png</item>
        <item>https://1.bp.blogspot.com/-Y1tk7P6cm5c/WmswTpOiD0I/AAAAAAAAAfU/jn1YtpovA2QV1O56AFL50ObBheGQVHY5wCLcBGAs/s1600/step_detector.png</item>
        <item>https://4.bp.blogspot.com/-EqgI0dHOooQ/WmswQhcgD7I/AAAAAAAAAe0/yoydpt3I6aguLR_mA-QjLIavKbv8byYKwCLcBGAs/s1600/motion_detector.png</item>
        <item>https://4.bp.blogspot.com/-EqgI0dHOooQ/WmswQhcgD7I/AAAAAAAAAe0/yoydpt3I6aguLR_mA-QjLIavKbv8byYKwCLcBGAs/s1600/motion_detector.png</item>
        <item>https://1.bp.blogspot.com/-SrgFt82ZCLc/WmswRZ3_MPI/AAAAAAAAAe8/mRQUEyxViLUVF75Uc8tP8G0wTZpe7h-XQCLcBGAs/s320/multitouch.png</item>
        <item>https://4.bp.blogspot.com/-UkwwF8Rys28/WmswO98JHPI/AAAAAAAAAeg/5fgs-lxbV2cYFrVqZKgmQhjptpUa1gomQCLcBGAs/s1600/heart.png</item>
        <item>https://3.bp.blogspot.com/-czbrT2VNsRw/WmswM47T0tI/AAAAAAAAAeI/FY1Msg2UKVk15B0GhmAY1hXHcBBqrRQEwCLcBGAs/s320/fingerprint.png</item>
        <item>https://1.bp.blogspot.com/-tA7kFIlkbp8/WmswRCOsSxI/AAAAAAAAAe4/Tb2ZqjLQBVc-5T0srTlCN72JcF5xtzahwCLcBGAs/s320/nfc.png</item>
        <item>https://1.bp.blogspot.com/-dOzKlgca6OI/WmswPxQR4kI/AAAAAAAAAes/5fxUGP7UqnsFvEDXfeK8MVe3gHD_BgOUgCLcBGAs/s1600/mag.jpg</item>
        
        
        
    </string-array>
    <string name="title_activity_battery">BatteryActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="about">Ever had doubts in you mind if your device consists of top-notch sensors like temperature sensor, pressure sensor, barometer, or even heart rate sensor? Sense-It-All! allows you to test the presence of over 38 sensors in your device, each of which, if present, is combined with a test to let you know of its limits.\n\n
This is a sensor test/device test application, aimed for both fun and professional purposes, targeting audience all over the world.\n\n

Sense-It-All! tests for the following sensors\'s presence in your device:\n
1. Main Camera\n
2. Secondary Camera\n
3. GPS\n
4. WiFi\n
5. Bluetooth\n
6. GSM/UMTS\n
7. Accelerometer\n
8. Compass\n
9. Radio\n
10.Screen\n
11. Battery\n
12. CPU\n
13. Sound\n
14. Vibrator\n
15. Microphone\n
16. USB\n
17. Audio/Video Outputs\n
18. Android OS\n
19. Light Sensor\n
20. Proximity Sensor\n
21. Temperature Sensor\n
22. Pressure Sensor\n
23. Relative Humidity\n
24. Flash\n
25. Gyroscope\n
26. Gravity\n
27. Linear Acceleration\n
28. Rotation Vector\n
29. Infrared\n
30. Step Detector\n
31. Step Counter\n
32.Motion Detector\n
33. Stationary Detector\n
34. MultiTouch\n
35. WiFi Direct\n
36. Heart Rate\n
37. Fingerprint\n
38. NFC\n
39. Magnetic Field Sensor\n\n

The tests for the above sensors provided in the app will could be used for fun, as well as for professional purposes, thus an extremely large range of people are welcome to use this app for sensor testing, or rather broadly, device testing.</string>
    <string name="device_test">Device Test</string>
    <string name="dev_names">Robin Kamboj || Rishabh Shukla</string>
    <string name="developers">Developers :</string>
    <string name="like_the_app">Like the app?</string>
    <string name="rate_us_five_stars">Rate Us Five Stars</string>
    <string name="about_the_app">About The App:</string>
    <string name="null_str">null</string>
    <string name="magnetic_field_sensor">Magnetic Field Sensor</string>
    <string name="accelerometer_sensor">Accelerometer Sensor</string>
    <string name="magnetic_compass">Magnetic Compass</string>
    <string name="radio">Radio</string>
    <string name="screen">Screen</string>
    <string name="cpu_details">CPU Details</string>
    <string name="sound_test">Sound Test</string>
    <string name="audio_video_test">Audio / Video Test</string>
    <string name="android_os">Android OS</string>
    <string name="proximity_sensor_test">Proximity Sensor Test</string>
    <string name="step_counter_test">Step Counter Test</string>
    <string name="step_detector_test">Step Detector Test</string>
    <string name="fingerprint_test">Fingerprint Test</string>
    <string name="maps_api_key">AIzaSyBe9ceu04l0lgA8cVB9LkyBIEZUCM_D9CQ</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sense_it_all">Sense It All!</string>
    <string name="showing_tests_list">SHOWING DEVICE TESTS</string>
    <string name="showing_sensors_list">SHOWING SENSORS LIST</string>
    <string name="showing_features_list">SHOWING FEATURES LIST</string>
    <string name="rate_your_experience">RATE YOUR EXPERIENCE</string>
    <string name="please_give_permissions">Some permissions not given. Please allow these permissions to access all sensors.</string>
    <string name="tag_list_fragment">LIST FRAGMENT</string>
    <string name="about_sensor">ABOUT:</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="about_proximity">
        Proximity sensing technology is becoming popular across a wide range of industries, especially in consumer electronics, because OEMs introduce new products to market every year. The largest application within consumer electronics is the mobile phone. Given the competition in this particular market, it is important for OEMs to adopt the latest technology and offer unique features to differentiate their products.
    </string>
    <string name="directions">DIRECTIONS</string>
    <string name="proximity_direction">Place Your Hand Above Proximity Sensor To Increment Counter.</string>
    <string name="proximity_hint">Proximity sensor is usually located at the top of a mobile screen.</string>
    <string name="start_test">START TEST</string>
    <string name="feedback_currently_under_evaluation">FEEDBACK CURRENTLY UNDER EVALUATION:</string>
    <string name="your_experience">YOUR EXPERIENCE</string>
    <string name="did_you_love_the_app_experience">Did You Love The App Experience?</string>
    <string name="did_you_find_something_missing">Did You Find Something Missing?</string>
    <string name="give_us_feedback">GIVE US FEEDBACK</string>
    <string name="rate_us_five_stars_text">RATE US FIVE STARS</string>
</resources>