<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_rate"
    android:id="@+id/rate_experience_screen"
    android:visibility="gone"
    tools:visibility="visible"
    android:layout_marginBottom="?android:attr/actionBarSize">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/your_experience"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorMajorDarkLighter"
        tools:ignore="ContentDescription,SmallSp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.6"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                tools:ignore="ContentDescription"
                android:src="@drawable/experience"
                android:tint="@color/white"
                android:padding="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:paddingStart="10sp"
                android:textSize="20sp"
                android:text="@string/did_you_love_the_app_experience"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            tools:ignore="ContentDescription"
            android:src="@drawable/five_stars_one"
            android:tint="@color/white"
            android:padding="10sp"
            android:id="@+id/image_five_stars"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMajorDark"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:text="@string/rate_us_five_stars_text"
            android:background="@drawable/feedback_background"
            android:paddingLeft="25sp"
            android:paddingRight="25sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:layout_margin="10sp"
            android:id="@+id/give_five_stars"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                tools:ignore="ContentDescription"
                android:src="@drawable/missing"
                android:tint="@color/white"
                android:padding="10sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:paddingStart="10sp"
                android:textSize="20sp"
                android:text="@string/did_you_find_something_missing"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorMajorDark"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:text="@string/give_us_feedback"
            android:background="@drawable/feedback_background"
            android:paddingLeft="25sp"
            android:paddingRight="25sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:layout_margin="5sp"
            android:id="@+id/give_feedback"/>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="@color/colorMajorDarkLighterLighter"
        tools:ignore="ContentDescription,SmallSp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:textColor="@color/white"
        android:text="@string/feedback_currently_under_evaluation"
        android:gravity="center_vertical|start"
        android:paddingLeft="10sp"
        android:textSize="18sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>