<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10sp"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextOne"
            android:textSize="15sp"
            android:text="@string/about_sensor"
            fontPath="fonts/Comfortaa-Bold.ttf"
            android:gravity="center"
            android:padding="10sp"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/colorTextThree"
            tools:ignore="ContentDescription,SmallSp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:textSize="15sp"
            android:textColor="@color/colorTextTwo"
            android:text="@string/about_proximity"
            android:padding="10sp"
            android:ellipsize="end"
            android:id="@+id/about"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/colorTextThree"
            tools:ignore="ContentDescription,SmallSp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/learn_more"
            fontPath="fonts/Comfortaa-Bold.ttf"
            android:textColor="@color/green_shade_three"
            android:paddingLeft="15sp"
            android:paddingRight="15sp"
            android:paddingTop="8sp"
            android:paddingBottom="8sp"
            android:id="@+id/learn_more"
            android:gravity="center_horizontal"
            android:background="@drawable/oval_button_green"
            android:layout_margin="5sp"
            android:layout_gravity="center_horizontal"
            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>

    </LinearLayout>

</android.support.v7.widget.CardView>